added navigation bar and some beauty

--- a/src/correctnessOfFormulas.html
+++ b/src/correctnessOfFormulas.html
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="headline typo-headline">
         <span class="material-icons">label_outline</span><span></span>
-        <span>Проверить являются ли формулы равносильными:</span>
+        <span>Проверить являются ли формулы корректными:</span>
     </div>
 
     <div class="input">
@@ -55,27 +55,15 @@
     <div class="is-equivalence typo-headline">
         <div class="is">
             <i class="material-icons">&#xE8DC;</i>
-            <span>Эти формулы равносильны</span>
+            <span>Эти формулы корректны</span>
         </div>
         <div class="is-not">
             <i class="material-icons">&#xE8DB;</i>
-            <span>Эти формулы неравносильны</span>
+            <span>Эти формулы некорректны</span>
         </div>
     </div>
 
-    <div class="table">
-        <div class="typo-headline">Построение истинностных таблиц</div>
-        <table
-                id="outcome-tableOne"
-                class="typo-code"
-                border="1">
-        </table>
-        <!--<table-->
-        <!--id="outcome-tableTwo"-->
-        <!--class="typo-code"-->
-        <!--border="1">-->
-        <!--</table>-->
-    </div>
+
 </div>
 <footer class="page-footer">
     <div class="container">
