--- a/src/beconditional.html
+++ b/src/beconditional.html
@@ -43,36 +43,43 @@
 
         <div class="inputA">
             <input
-                    id="expression"
+                    id="firstExpression"
                     class="typo-code"
-                    name="expression"
+                    name="firstExpression"
                     placeholder="Введите формулу А"
-                    onkeypress="onEnterPress(event)">
+            >
         </div>
 
         <div class="inputB">
             <input
-                    id="expressionTwo"
+                    id="secondExpression"
                     class="typo-code"
-                    name="expressionTwo"
+                    name="secondExpression"
                     placeholder="Введите формулу В"
-                    onkeypress="onEnterPress(event)">
+            >
         </div>
+
     </div>
 
     <div class="user-guide">
         <ul id="dropdown2" class="dropdown-content">
 
-                <li><a href="#!">Отрицание<span class="badge">!</span></a></li>
-                <li><a href="#!">Конъюнкция<span class="badge">&amp;</span></a></li>
-                <li><a href="#!">Дизъюнкция<span class="badge">|</span></a></li>
-                <li><a href="#!">Ипликация<span class="badge">&gt;</span></a></li>
-                <li><a href="#!">Эквиваленция<span class="badge">=</span></a></li>
-                <li><a href="#!">Откр. скобка<span class="badge">(</span></a></li>
-                <li><a href="#!">Закр. скобка<span class="badge">)</span></a></li>
+            <li><a href="#!">Отрицание<span class="badge">!</span></a></li>
+            <li><a href="#!">Конъюнкция<span class="badge">&amp;</span></a></li>
+            <li><a href="#!">Дизъюнкция<span class="badge">|</span></a></li>
+            <li><a href="#!">Ипликация<span class="badge">&gt;</span></a></li>
+            <li><a href="#!">Эквиваленция<span class="badge">=</span></a></li>
+            <li><a href="#!">Откр. скобка<span class="badge">(</span></a></li>
+            <li><a href="#!">Закр. скобка<span class="badge">)</span></a></li>
         </ul>
 
-        <a class="btn dropdown-button" href="#!" data-activates="dropdown2">Обозначения:<i class="material-icons right">arrow_drop_down</i></a>
+        <a class="btn dropdown-button" href="#!" data-activates="dropdown2">Обозначения:<i
+                class="material-icons center">arrow_drop_down</i></a>
+
+
+        <!--<a class="waves-effect waves-teal btn-flat">ПРОВЕРИТЬ</a>-->
+        <input value="ПРОВЕРИТЬ" onclick="onCalculatePress()" type="button"/>
+
     </div>
 
 
@@ -94,11 +101,6 @@
                 class="typo-code"
                 border="1">
         </table>
-        <!--<table-->
-        <!--id="outcome-tableTwo"-->
-        <!--class="typo-code"-->
-        <!--border="1">-->
-        <!--</table>-->
     </div>
 </div>
 <footer class="page-footer">
@@ -112,8 +114,8 @@
             <div class="col l4 offset-l2 s12">
                 <h5 class="typo-headline">GitHub:</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="http://github.com/indywka">indywka</a></li>
                     <li><a class="grey-text text-lighten-3" href="https://github.com/MaxGavr">MaxGavr</a></li>
+                    <li><a class="grey-text text-lighten-3" href="http://github.com/indywka">indywka</a></li>
                 </ul>
             </div>
         </div>
