added the check-button

--- a/src/beconditional.html
+++ b/src/beconditional.html
@@ -67,8 +67,8 @@
             <li><a href="#!">Отрицание<span class="badge">!</span></a></li>
             <li><a href="#!">Конъюнкция<span class="badge">&amp;</span></a></li>
             <li><a href="#!">Дизъюнкция<span class="badge">|</span></a></li>
-            <li><a href="#!">Ипликация<span class="badge">&gt;</span></a></li>
-            <li><a href="#!">Эквиваленция<span class="badge">=</span></a></li>
+            <li><a href="#!">Ипликация<span class="badge">-></span></a></li>
+            <li><a href="#!">Эквиваленция<span class="badge">~</span></a></li>
             <li><a href="#!">Откр. скобка<span class="badge">(</span></a></li>
             <li><a href="#!">Закр. скобка<span class="badge">)</span></a></li>
         </ul>
@@ -77,8 +77,10 @@
                 class="material-icons center">arrow_drop_down</i></a>
 
 
-        <!--<a class="waves-effect waves-teal btn-flat">ПРОВЕРИТЬ</a>-->
-        <input value="ПРОВЕРИТЬ" onclick="onCalculatePress()" type="button"/>
+        <button class="btn waves-effect waves-light" onclick="onCalculatePress()" type="button" name="action">
+            Проверить
+            <i class="material-icons right"></i>
+        </button>
 
     </div>
 
