--- a/src/beconditional.html
+++ b/src/beconditional.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.10.0/vis.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.10.0/vis.min.css" charset="utf-8">
 
-    <script src="page.js"></script>
+    <script src="beconditionalPage.js"></script>
     <script src="logic.js"></script>
 
     <link rel="stylesheet" href="styles.css" charset="utf-8">
