--- a/src/beconditional.html
+++ b/src/beconditional.html
@@ -95,7 +95,7 @@
     </div>
 
     <div class="table">
-        <div class="typo-headline">Построение истинностных таблиц</div>
+        <div class="typo-headline">Таблица истинности</div>
         <table
                 id="outcome-tableOne"
                 class="typo-code"
