--- a/src/correctnessOfFormulas.html
+++ b/src/correctnessOfFormulas.html
@@ -45,7 +45,7 @@
                     id="expression"
                     class="typo-code"
                     name="expression"
-                    placeholder="Введите формулу, которую необходимо проверить">
+                    placeholder="Введите формулу для проверки">
         </div>
     </div>
 
