Revert "added the check-button"
This reverts commit 8eb1dc8

--- a/src/beconditional.html
+++ b/src/beconditional.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+﻿﻿<!doctype html>
 
 <head>
     <title>ЛОИС №1</title>
@@ -67,8 +67,8 @@
             <li><a href="#!">Отрицание<span class="badge">!</span></a></li>
             <li><a href="#!">Конъюнкция<span class="badge">&amp;</span></a></li>
             <li><a href="#!">Дизъюнкция<span class="badge">|</span></a></li>
-            <li><a href="#!">Ипликация<span class="badge">-></span></a></li>
-            <li><a href="#!">Эквиваленция<span class="badge">~</span></a></li>
+            <li><a href="#!">Ипликация<span class="badge">&gt;</span></a></li>
+            <li><a href="#!">Эквиваленция<span class="badge">=</span></a></li>
             <li><a href="#!">Откр. скобка<span class="badge">(</span></a></li>
             <li><a href="#!">Закр. скобка<span class="badge">)</span></a></li>
         </ul>
@@ -77,10 +77,8 @@
                 class="material-icons center">arrow_drop_down</i></a>
 
 
-        <button class="btn waves-effect waves-light" onclick="onCalculatePress()" type="button" name="action">
-            Проверить
-            <i class="material-icons right"></i>
-        </button>
+        <!--<a class="waves-effect waves-teal btn-flat">ПРОВЕРИТЬ</a>-->
+        <input value="ПРОВЕРИТЬ" onclick="onCalculatePress()" type="button"/>
 
     </div>
 
