--- a/src/beconditional.html
+++ b/src/beconditional.html
@@ -1,4 +1,6 @@
-﻿﻿<!doctype html>
+﻿<!--@author: Gavriluk & Minchik -->
+
+<!doctype html>
 
 <head>
     <title>ЛОИС №1</title>
@@ -25,7 +27,7 @@
 <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper">
-            <a href="" class="brand-logo center">Лабораторная работа №2, Вариант 6</a>
+            <a href="" class="brand-logo center"></a>
             <ul class="left hide-on-med-and-down">
                 <li><a href="correctnessOfFormulas.html">Проверка на правильность</a></li>
                 <li><a href="beconditional.html">Проверка на равносильность</a></li>
@@ -36,7 +38,7 @@
 <div class="container">
     <div class="headline typo-headline">
         <span class="material-icons">label_outline</span><span></span>
-        <span>Проверить являются ли формулы равносильными:</span>
+        <span>Проверить, являются ли формулы равносильными:</span>
     </div>
 
     <div class="input">
@@ -67,8 +69,8 @@
             <li><a href="#!">Отрицание<span class="badge">!</span></a></li>
             <li><a href="#!">Конъюнкция<span class="badge">&amp;</span></a></li>
             <li><a href="#!">Дизъюнкция<span class="badge">|</span></a></li>
-            <li><a href="#!">Ипликация<span class="badge">&gt;</span></a></li>
-            <li><a href="#!">Эквиваленция<span class="badge">=</span></a></li>
+            <li><a href="#!">Ипликация<span class="badge">-></span></a></li>
+            <li><a href="#!">Эквиваленция<span class="badge">~</span></a></li>
             <li><a href="#!">Откр. скобка<span class="badge">(</span></a></li>
             <li><a href="#!">Закр. скобка<span class="badge">)</span></a></li>
         </ul>
@@ -77,8 +79,10 @@
                 class="material-icons center">arrow_drop_down</i></a>
 
 
-        <!--<a class="waves-effect waves-teal btn-flat">ПРОВЕРИТЬ</a>-->
-        <input value="ПРОВЕРИТЬ" onclick="onCalculatePress()" type="button"/>
+        <button class="btn waves-effect waves-light" onclick="onCalculatePress()" type="button" name="action">
+            Проверить
+            <i class="material-icons right"></i>
+        </button>
 
     </div>
 
@@ -86,11 +90,11 @@
     <div class="is-equivalence typo-headline">
         <div class="is">
             <i class="material-icons">&#xE8DC;</i>
-            <span>Эти формулы равносильны</span>
+            <span>Формулы A и B равносильны</span>
         </div>
         <div class="is-not">
             <i class="material-icons">&#xE8DB;</i>
-            <span>Эти формулы неравносильны</span>
+            <span>Формулы A и B неравносильны</span>
         </div>
     </div>
 
@@ -103,24 +107,6 @@
         </table>
     </div>
 </div>
-<footer class="page-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="typo-headline">О лабораторной работе:</h5>
-                <p class="black-text text-lighten-4">В данной лабораторной работе проверяется, являются ли введенные
-                    формулы корректными и равносильными.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-                <h5 class="typo-headline">GitHub:</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="https://github.com/MaxGavr">MaxGavr</a></li>
-                    <li><a class="grey-text text-lighten-3" href="http://github.com/indywka">indywka</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+
 </body>
 
-</html>
